Documentation/LookingIntoTheCode/CommandLineDemo/deployment-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: middle-api
  labels:
    app: middle-api
spec:
  selector:
    app: middle-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: middle-api-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: middle-api
    spec:
      containers:
      - name: middle-api
        image: azuredemosrepo/aks-lab-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "250Mi"
            cpu: "100m"
          limits:
            memory: "350Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  selector:
    app: backend-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-api-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend-api
        image: azuredemosrepo/aks-lab-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "250Mi"
            cpu: "100m"
          limits:
            memory: "350Mi"
            cpu: "200m"
