Documentation/LookingIntoTheCode/CommandLineDemo/deployment-website.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: azuredemosrepo/aks-lab-website:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "250Mi"
            cpu: "100m"
          limits:
            memory: "350Mi"
            cpu: "200m"
        volumeMounts:
        - name: config-volume
          mountPath: /app/Configs/Environments/Kubernetes/Json
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: config-web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 80
